--- a/index.html
+++ b/index.html
@@ -31,42 +31,31 @@
             var messageObject = {
                 message: message
             };
-            
-            var size = 
-            firebase.database().ref('messages/').push(messageObject)
-                .then(function (snapshot) {
-                    console.log('Save to firebase success');
-                }, function (error) {
-                    console.log('Error : ' + error);
-                });
+
+            var size =
+                firebase.database().ref('messages/').push(messageObject)
+                    .then(function (snapshot) {
+                        console.log('Save to firebase success');
+                    }, function (error) {
+                        console.log('Error : ' + error);
+                    });
         }
 
-        function getMessage() {
-            firebase.database().ref('messages').limitToLast(1).on("child_added", function (data, prevChildKey) {
-                var data = data.val();
-                // console.log("Data yang mau diambil : " + data.message);
-            });
-            function (data, prevChildKey) {
-                var data = data.val();
-                console.log("Data yang mau diambil : " + data.message);
-            }
-        }
 
-        
-        getMessage();
-        // console.log(getLengthFirebase());
+
+
     </script>
 </head>
 
 <body>
     <div class="container">
         Message for fyfirman
-        <div class="form-group col-md-6">
-            <input type="text" class="form-control" name="" id="message-input" placeholder="Enter your message">
-            <button name="" id="" class="btn btn-primary" type="submit" value="" onclick="submit()">Submit</button>
-        </div>
-        <div id="test">
-
+        <div class="row">
+            <div class="form-group col-md-6">
+                <input type="text" class="form-control" name="" id="message-input" placeholder="Enter your message">
+                <button name="" id="" class="btn btn-primary" type="submit" value="" onclick="submit()">Submit</button>
+            </div>
+            <div id="message-container" class="col-md-6"></div>
         </div>
     </div>
 
@@ -74,11 +63,21 @@
         var ref = firebase.database().ref('messages');
         ref.on("value", function (snapshot) {
             obj = snapshot.val();
-            // console.log(JSON.stringify(obj));
-            // $.each(obj, function(i, item){
-            // });
-
         });
+
+        function retrieveMessage() {
+            firebase.database().ref('messages').on("child_added", function (data, prevChildKey) {
+                message = data.val().message;
+                showMessages(message);
+            });
+        }
+
+        function showMessages(message) {
+            console.log("Data yang mau diambil : " + message);
+            document.getElementById("message-container").innerHTML += '<button class="btn btn-primary">' + message + '</button>';
+        }
+
+        retrieveMessage();
     </script>
 </body>
 
