--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>fyfirman</title>
+
+    <!-- CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
-    <title>fyfirman</title>
+    <link rel="stylesheet" href="style.css">
+
+    <!-- Script -->
     <script src="https://www.gstatic.com/firebasejs/5.5.8/firebase.js"></script>
     <script>
         // Initialize Firebase
@@ -22,9 +24,21 @@
         firebase.initializeApp(config);
     </script>
     <script>
+        function validate(message){
+            len = message.length;
+            if(len >= 30 && len <=3){
+                return true;
+            }else return false;
+        }
+        
         function submit() {
             var message = document.getElementById("message-input").value;
-            saveToFirebase(message);
+            if(validate(message)){
+                document.getElementById("message-input").value = '';
+                saveToFirebase(message);
+            }else{
+                alert("Message must be 3-30 character");
+            }
         }
 
         function saveToFirebase(message) {
@@ -40,20 +54,16 @@
                         console.log('Error : ' + error);
                     });
         }
-
-
-
-
     </script>
 </head>
 
 <body>
-    <div class="container">
-        Message for fyfirman
+    <div class="container content">
+        <h1>Write anything about me</h1>
         <div class="row">
             <div class="form-group col-md-6">
-                <input type="text" class="form-control" name="" id="message-input" placeholder="Enter your message">
-                <button name="" id="" class="btn btn-primary" type="submit" value="" onclick="submit()">Submit</button>
+                <input type="text" class="form-control" name="" id="message-input" placeholder="Enter your message" required>
+                <button name="" id="" class="btn btn-submit" type="submit" value="" onclick="submit()">Submit</button>
             </div>
             <div id="message-container" class="col-md-6"></div>
         </div>
@@ -74,7 +84,7 @@
 
         function showMessages(message) {
             console.log("Data yang mau diambil : " + message);
-            document.getElementById("message-container").innerHTML += '<button class="btn btn-primary">' + message + '</button>';
+            document.getElementById("message-container").innerHTML += '<a class="message-item">' + message + '</a>';
         }
 
         retrieveMessage();
