--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>fyfirman</title>
+    <title>[BETA] Write about FY! </title>
 
     <!-- CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
@@ -26,7 +26,7 @@
     <script>
         function validate(message){
             len = message.length;
-            if(len >= 30 && len <=3){
+            if(len >= 3 && len <=30){
                 return true;
             }else return false;
         }
@@ -58,12 +58,12 @@
 </head>
 
 <body>
-    <div class="container content">
+    <div class="container content mt-5">
         <h1>Write anything about me</h1>
-        <div class="row">
-            <div class="form-group col-md-6">
-                <input type="text" class="form-control" name="" id="message-input" placeholder="Enter your message" required>
-                <button name="" id="" class="btn btn-submit" type="submit" value="" onclick="submit()">Submit</button>
+        <div class="row mt-2">
+            <div class="message-form form-group col-md-6">
+                <input type="text" class="form-control" name="" id="message-input" placeholder="Write your message here..." required>
+                <button name="" id="" class="btn btn-submit col-md-3 col-sm-4" type="submit" value="" onclick="submit()">Submit</button>
             </div>
             <div id="message-container" class="col-md-6"></div>
         </div>
