--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>[BETA] Write about FY! </title>
 
     <!-- CSS -->
@@ -59,13 +60,16 @@
 
 <body>
     <div class="container content mt-5">
-        <h1>Write anything about me</h1>
+        <h1>Write an impression about me</h1>
         <div class="row mt-2">
-            <div class="message-form form-group col-md-6">
+            <div class="message-form form-group col-md-12">
                 <input type="text" class="form-control" name="" id="message-input" placeholder="Write your message here..." required>
                 <button name="" id="" class="btn btn-submit col-md-3 col-sm-4" type="submit" value="" onclick="submit()">Submit</button>
             </div>
-            <div id="message-container" class="col-md-6"></div>
+        </div>
+        <div class="row mt-2">
+            <h5>Mansyah's impression:</h5>
+            <div id="message-container" class="col-md-12"></div>
         </div>
     </div>
 
