remove blue bg when clicked

--- a/message/index.html
+++ b/message/index.html
@@ -10,13 +10,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <button class="button neuphormism back-button"><i class="fa fa-arrow-left"></i></button>
+    <button class="button neuphormism back-button no-select"><i class="fa fa-arrow-left"></i></button>
     <div class="container">
         <span class="title">Pesan untuk Mansyah!</span>
         <form action="">
             <input type="text" class="sender-input input neuphormism inverse" placeholder="Nama Pengirim (Opsional)">
             <textarea rows="10" cols="50" class="message-input input neuphormism inverse" placeholder="Pesan"></textarea> 
-            <input type="submit" class="button submit-button highlight-bg neuphormism" value="KIRIM">
+            <input type="submit" class="button submit-button highlight-bg neuphormism no-select" value="KIRIM">
         </form>
     </div>
 </body>
