--- a/message/index.html
+++ b/message/index.html
@@ -24,14 +24,14 @@
         </div>
     </div>
     <div id="success" class="container" style="display: none;">
-        <img src="https://dummyimage.com/300x300/000000/fff" alt="" srcset="">
+        <img src="mansyah-ok-web.png" srcset="">
         <span class="title">Pesan kamu udah kekirim. Makasih ya!</span>
         <div class="button-wrapper">
             <button class="button send-more-button highlight-bg neuphormism no-select" onclick="showForm()">Kirim lagi?</button>
         </div>
     </div>
     <div id="failed" class="container" style="display: none;">
-        <img src="https://dummyimage.com/300x300/000000/fff" alt="" srcset="">
+        <img src="mansyah-cry-web.png" srcset="">
         <span class="title">Waduh! </span>
         <span class="title">Pesan kamu gak sampe.</span>
         <span class="title">Coba screenshot & hubungin mansyah ya!</span>
