--- a/index.html
+++ b/index.html
@@ -1,3 +1,16 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Firmansyah Yanuar</title>
+  </head>
+  <body>
+    Please visit <a href="fyfirman.tech">fyfirman.tech</a>
+  </body>
+</html>
+
 <script>
   window.location.href = "https://fyfirman.tech";
 </script>
